--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,10 @@
   height: 40vmin;
 }
 
+* {
+  -webkit-tap-highlight-color: transparent;
+}
+
 .App-header {
   background-color: #000000;
   min-height: 100vh;
@@ -37,6 +41,7 @@
     transition: opacity 300ms cubic-bezier(0.645, 0.045, 0.355, 1),
       transform 300ms cubic-bezier(0.645, 0.045, 0.355, 1);
   }
+
   100% {
     opacity: 1;
     transform: translateY(0px);
@@ -52,6 +57,7 @@
     transition: opacity 300ms cubic-bezier(0.645, 0.045, 0.355, 1),
       transform 300ms cubic-bezier(0.645, 0.045, 0.355, 1);
   }
+
   100% {
     opacity: 1;
     transform: translateY(0px);
