--- a/src/components/topButton/TopButton.css
+++ b/src/components/topButton/TopButton.css
@@ -8,4 +8,12 @@
   outline: none;
   border-radius: 2rem;
   font-size: 1.5rem;
+  z-index: 9999;
+  outline: none;
+  user-select: none;
+}
+
+#topButton:focus {
+  outline: none;
+  box-shadow: none;
 }
